renamed .tmpl.html to just .tmpl and added caching for templates

--- a/.prittierrc
+++ b/.prittierrc
@@ -5,7 +5,7 @@
     "overrides": [
         {
             "files": [
-                "*.html"
+                "*.tmpl"
             ],
             "options": {
                 "parser": "go-template"
